[tool.poetry]
name = "cipher_hs3240"
version = "0.1.0"
description = "A cool papackage to use the cipher function!"
authors = ["Huan Sun"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
